# ParkingSpace

./: .gitignore  CountSpotsStream.py  DetAndSegData.xlsx  LOGGING_AND_PERFORMANCE_GUIDE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PSinit.py  ParkingSpace.py  README.md  RTtest.py  RealTime.py  STARTUP_OPTIMIZATION_RESULTS.md  car_masks.txt  detect.py  main.py  masks.py  parkingspaces.ipynb  plots.py  pyproject.toml  regions.json  regions_exp.json  requirements-gpu.txt  requirements.txt  run_fast.py  run_optimized.py  test_performance_optimization.py  univtest.py
.github/workflow/: core_code_checks.yml
.github/workflows/: python-package.yml
performance_tests/: analyze_timing.py  demo_with_logging.py  test_logging_and_performance.py  test_real_startup_time.py  test_startup_optimization.py
runs/detect/predict/labels/: 1.txt
runs/detect/predict2/labels/: 2.txt
runs/detect/predict4/labels/: 1.txt
runs/detect/predict6/labels/: 6.txt
runs/detect/predict7/labels/: 7.txt
runs/detect/predict8/labels/: 8.txt
runs/segment/predict/: car_masks.txt
runs/segment/predict2/: car_masks.txt
runs/segment/predict3/: car_masks.txt
runs/segment/predict7/: car_masks.txt
runs/segment/predict8/: car_masks.txt
runs/segment/predict9/: car_masks.txt
scripts/: PSinit.py  code_quality_check.py  full_diagnostic.py  import_check.py  syntax_check.py
src/parkingspace/: __init__.py  capabilities.py  config.py  exceptions.py  fast_startup.py  logger.py  main.py  main_fast.py  performance.py  pipeline.py  regions.py  services.py  utils.py
tests/: test_main.py  test_regions.py
(+7 files in other folders)
