[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parkingspace"
version = "0.1.0"
description = "Comprehensive Parking Space Detection using YOLO."
authors = [
  { name = "Daniel Bobritski", email = "[danielbob32@gmail.com]" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.8"

[project.dependencies]
opencv-python = "*"
numpy = "*"
ultralytics = "*"
torch = "*"
